[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/MobileGame.gd" type="Script" id=1]
[ext_resource path="res://MenuButtons.gd" type="Script" id=2]
[ext_resource path="res://Art/JesusTalesBackground.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Title.gd" type="Script" id=4]
[ext_resource path="res://Font/BECKETT_.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://gugi-25.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/LevelChoose.gd" type="Script" id=7]
[ext_resource path="res://Font/Retro Gaming.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/ButtonLevels.gd" type="Script" id=9]
[ext_resource path="res://Scenes/FinishMenu.gd" type="Script" id=10]
[ext_resource path="res://Scenes/GameScene.gd" type="Script" id=11]
[ext_resource path="res://Font/Roboto-Medium.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scenes/History.gd" type="Script" id=13]
[ext_resource path="res://Art/history_background.jpg" type="Texture" id=14]
[ext_resource path="res://Scenes/RichTextLabel.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Timer.gd" type="Script" id=16]
[ext_resource path="res://Art/Scene1.png" type="Texture" id=17]
[ext_resource path="res://Art/Scene5.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 134
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 41
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
size = 38
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="DynamicFont" id=9]
size = 43
font_data = ExtResource( 12 )

[sub_resource type="StreamTexture" id=10]
flags = 4
load_path = "res://.import/Scene2.png-34c4b6960f33f5eda074390d097662df.stex"

[sub_resource type="StreamTexture" id=11]
flags = 4
load_path = "res://.import/Scene4.png-01536afc9e3102989269678e2af6e30c.stex"

[sub_resource type="StreamTexture" id=12]
flags = 4
load_path = "res://.import/Scene5.png-d7bda253c55039af78160e923ab51d03.stex"

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Node2D" parent="."]

[node name="MainMenu" type="Node2D" parent="UI"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="UI/MainMenu"]

[node name="ColorRect" type="ColorRect" parent="UI/MainMenu/Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="TextureRect" type="TextureRect" parent="UI/MainMenu/Background/ColorRect"]
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Title" type="Node2D" parent="UI/MainMenu"]
script = ExtResource( 4 )

[node name="Label" type="Label" parent="UI/MainMenu/Title"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_right = 576.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.282353, 0.282353, 0.282353, 1 )
text = "JesusTales"
align = 1
valign = 1

[node name="Tween0" type="Tween" parent="UI/MainMenu/Title"]

[node name="Start" type="Button" parent="UI/MainMenu"]
margin_top = 450.0
margin_right = 576.0
margin_bottom = 507.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Start the Game"
flat = true

[node name="Tween" type="Tween" parent="UI/MainMenu"]

[node name="LevelChoose" type="Node2D" parent="UI"]
position = Vector2( 576, 0 )
script = ExtResource( 7 )

[node name="Background" type="Node2D" parent="UI/LevelChoose"]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="UI/LevelChoose/Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="Title" type="Node2D" parent="UI/LevelChoose"]

[node name="Label" type="Label" parent="UI/LevelChoose/Title"]
margin_top = 75.0
margin_right = 576.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.282353, 0.282353, 0.282353, 1 )
text = "Wybierz poziom:"
align = 1
valign = 1

[node name="ButtonLevels" type="Node2D" parent="UI/LevelChoose"]
script = ExtResource( 9 )

[node name="Level1_button" type="Button" parent="UI/LevelChoose/ButtonLevels"]
margin_left = 105.0
margin_top = 300.0
margin_right = 235.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 3360, 150 )
custom_fonts/font = SubResource( 3 )
text = "1"

[node name="Level2_button" type="Button" parent="UI/LevelChoose/ButtonLevels"]
margin_left = 340.0
margin_top = 300.0
margin_right = 470.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 3360, 150 )
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="Level3_button" type="Button" parent="UI/LevelChoose/ButtonLevels"]
margin_left = 105.0
margin_top = 520.0
margin_right = 235.0
margin_bottom = 650.0
rect_pivot_offset = Vector2( 3360, 150 )
custom_fonts/font = SubResource( 3 )
text = "3"

[node name="Tween" type="Tween" parent="UI/LevelChoose"]

[node name="FinishMenu" type="Node2D" parent="UI"]
editor/display_folded = true
position = Vector2( -576, 0 )
script = ExtResource( 10 )

[node name="Background" type="Node2D" parent="UI/FinishMenu"]

[node name="ColorRect" type="ColorRect" parent="UI/FinishMenu/Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.941176, 0.941176, 0.941176, 1 )

[node name="Title" type="Node2D" parent="UI/FinishMenu"]

[node name="Label" type="Label" parent="UI/FinishMenu/Title"]
margin_top = 175.0
margin_right = 576.0
margin_bottom = 613.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.282353, 0.282353, 0.282353, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Score" type="Node2D" parent="UI/FinishMenu"]
editor/display_folded = true

[node name="ScoreTable" type="Label" parent="UI/FinishMenu/Score"]
margin_top = 500.0
margin_right = 576.0
margin_bottom = 634.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.282353, 0.282353, 0.282353, 1 )
text = "Zdobyles:"
align = 1
valign = 1

[node name="BacktoMenu" type="Button" parent="UI/FinishMenu"]
margin_top = 700.0
margin_right = 576.0
margin_bottom = 757.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.462745, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Back to Start"
flat = true

[node name="Tween4" type="Tween" parent="UI/FinishMenu"]

[node name="GameScene" type="Node2D" parent="."]
position = Vector2( 576, 0 )
script = ExtResource( 11 )

[node name="UIgame" type="Node2D" parent="GameScene"]

[node name="Background" type="Node2D" parent="GameScene/UIgame"]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="GameScene/UIgame/Background"]
margin_top = -0.487671
margin_right = 576.0
margin_bottom = 1023.51

[node name="QA_Table" type="Node2D" parent="GameScene"]

[node name="Question" type="Label" parent="GameScene/QA_Table"]
margin_top = 500.0
margin_right = 576.0
margin_bottom = 798.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pytanie
"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="AnswerTable" type="Node2D" parent="GameScene/QA_Table"]
position = Vector2( -576, 0 )

[node name="A" type="Button" parent="GameScene/QA_Table/AnswerTable"]
margin_left = 576.0
margin_top = 800.0
margin_right = 864.0
margin_bottom = 1000.0
custom_fonts/font = SubResource( 6 )
text = "Odpowiedz A"

[node name="B" type="Button" parent="GameScene/QA_Table/AnswerTable"]
margin_left = 865.716
margin_top = 800.0
margin_right = 1153.72
margin_bottom = 1000.0
custom_fonts/font = SubResource( 6 )
text = "Odpowiedz B"

[node name="Tween1" type="Tween" parent="GameScene"]

[node name="Levels" type="Node2D" parent="."]
editor/display_folded = true

[node name="1_level" type="Node2D" parent="Levels"]

[node name="History" type="Node2D" parent="Levels/1_level"]
position = Vector2( 576, 0 )
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Levels/1_level/History"]
scale = Vector2( 0.920091, 2.40399 )
texture = ExtResource( 14 )
centered = false

[node name="History_text" type="RichTextLabel" parent="Levels/1_level/History"]
anchor_top = 0.64
anchor_bottom = 0.64
margin_right = 576.0
margin_bottom = 1024.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "
"
text = "
"
script = ExtResource( 15 )

[node name="Timer" type="Timer" parent="Levels/1_level/History"]
wait_time = 0.01
autostart = true
script = ExtResource( 16 )

[node name="Start2" type="Button" parent="Levels/1_level/History"]
margin_left = 576.0
margin_top = 900.0
margin_right = 1152.0
margin_bottom = 957.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.25098, 0.0235294, 0.0235294, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Rozpocznij stacjÄ™"
flat = true

[node name="Tween3" type="Tween" parent="Levels/1_level/History"]

[node name="SkipWaiting" type="Button" parent="Levels/1_level/History"]
margin_right = 576.0
margin_bottom = 1024.0
flat = true

[node name="Questions" type="Node2D" parent="Levels/1_level"]

[node name="Scene1" type="Node2D" parent="Levels/1_level/Questions"]
position = Vector2( 1152, 0 )

[node name="Area2D" type="Area2D" parent="Levels/1_level/Questions/Scene1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/1_level/Questions/Scene1/Area2D"]
shape = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Levels/1_level/Questions/Scene1/Area2D"]
margin_left = 8.0
margin_top = 5.0
margin_right = 566.0
margin_bottom = 489.0
custom_fonts/normal_font = SubResource( 9 )
text = "1"

[node name="TextureRect1" type="TextureRect" parent="Levels/1_level/Questions/Scene1/Area2D"]
margin_right = 576.0
margin_bottom = 497.0
texture = ExtResource( 17 )

[node name="TimerScene1" type="Timer" parent="Levels/1_level/Questions/Scene1"]
wait_time = 10.0

[node name="TimerSceneAnswer1" type="Timer" parent="Levels/1_level/Questions/Scene1"]
one_shot = true

[node name="Scene2" type="Node2D" parent="Levels/1_level/Questions"]
position = Vector2( 1152, 0 )

[node name="Area2D" type="Area2D" parent="Levels/1_level/Questions/Scene2"]

[node name="ColorRect" type="ColorRect" parent="Levels/1_level/Questions/Scene2/Area2D"]
margin_right = 576.0
margin_bottom = 497.0
color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/1_level/Questions/Scene2/Area2D"]
shape = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Levels/1_level/Questions/Scene2/Area2D"]
margin_left = 70.0
margin_top = 60.0
margin_right = 511.0
margin_bottom = 428.0
custom_fonts/normal_font = SubResource( 9 )
text = "
2"

[node name="TextureRect2" type="TextureRect" parent="Levels/1_level/Questions/Scene2/Area2D"]
margin_right = 576.0
margin_bottom = 497.0
texture = SubResource( 10 )

[node name="TimerScene2" type="Timer" parent="Levels/1_level/Questions/Scene2"]
wait_time = 10.0

[node name="TimerSceneAnswer2" type="Timer" parent="Levels/1_level/Questions/Scene2"]
one_shot = true

[node name="Scene3" type="Node2D" parent="Levels/1_level/Questions"]
position = Vector2( 1152, 0 )

[node name="Area2D" type="Area2D" parent="Levels/1_level/Questions/Scene3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/1_level/Questions/Scene3/Area2D"]
shape = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Levels/1_level/Questions/Scene3/Area2D"]
margin_left = 77.0
margin_top = 98.0
margin_right = 519.0
margin_bottom = 442.0
custom_fonts/normal_font = SubResource( 9 )
text = "3
"

[node name="TextureRect3" type="TextureRect" parent="Levels/1_level/Questions/Scene3/Area2D"]
margin_right = 576.0
margin_bottom = 497.0
texture = ExtResource( 18 )

[node name="TimerScene3" type="Timer" parent="Levels/1_level/Questions/Scene3"]
wait_time = 10.0

[node name="TimerSceneAnswer3" type="Timer" parent="Levels/1_level/Questions/Scene3"]
one_shot = true

[node name="Scene4" type="Node2D" parent="Levels/1_level/Questions"]
position = Vector2( 1152, 0 )

[node name="Area2D" type="Area2D" parent="Levels/1_level/Questions/Scene4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/1_level/Questions/Scene4/Area2D"]
shape = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Levels/1_level/Questions/Scene4/Area2D"]
margin_left = 46.0
margin_top = 60.0
margin_right = 525.0
margin_bottom = 431.0
custom_fonts/normal_font = SubResource( 9 )
text = "4
"

[node name="TextureRect4" type="TextureRect" parent="Levels/1_level/Questions/Scene4/Area2D"]
margin_right = 576.0
margin_bottom = 497.0
texture = SubResource( 11 )

[node name="TimerScene4" type="Timer" parent="Levels/1_level/Questions/Scene4"]
wait_time = 10.0

[node name="TimerSceneAnswer4" type="Timer" parent="Levels/1_level/Questions/Scene4"]
wait_time = 2.0
one_shot = true

[node name="Scene5" type="Node2D" parent="Levels/1_level/Questions"]
position = Vector2( 1152, 0 )

[node name="Area2D" type="Area2D" parent="Levels/1_level/Questions/Scene5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Levels/1_level/Questions/Scene5/Area2D"]
shape = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="Levels/1_level/Questions/Scene5/Area2D"]
margin_left = 39.0
margin_top = 26.0
margin_right = 538.0
margin_bottom = 453.0
custom_fonts/normal_font = SubResource( 9 )
text = "5
"

[node name="TextureRect5" type="TextureRect" parent="Levels/1_level/Questions/Scene5/Area2D"]
margin_right = 576.0
margin_bottom = 497.0
texture = SubResource( 12 )

[node name="TimerScene5" type="Timer" parent="Levels/1_level/Questions/Scene5"]
wait_time = 10.0

[node name="TimerSceneAnswer5" type="Timer" parent="Levels/1_level/Questions/Scene5"]
wait_time = 2.0
one_shot = true
[connection signal="ready" from="UI/MainMenu/Title/Label" to="." method="_on_JesusTalesName_ready"]
[connection signal="pressed" from="UI/MainMenu/Start" to="." method="_on_Start_Pressed"]
[connection signal="pressed" from="UI/LevelChoose/ButtonLevels/Level1_button" to="." method="_on_Level1_button_pressed"]
[connection signal="ready" from="UI/FinishMenu/Score/ScoreTable" to="." method="_on_ScoreTable_ready"]
[connection signal="pressed" from="UI/FinishMenu/BacktoMenu" to="." method="_on_BackToMenu_Pressed"]
[connection signal="pressed" from="GameScene/QA_Table/AnswerTable/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="GameScene/QA_Table/AnswerTable/B" to="." method="_on_B_pressed"]
[connection signal="timeout" from="Levels/1_level/History/Timer" to="Levels/1_level/History/History_text" method="_on_Timer_timeout"]
[connection signal="pressed" from="Levels/1_level/History/Start2" to="." method="_on_StartLevel_Pressed"]
[connection signal="pressed" from="Levels/1_level/History/SkipWaiting" to="." method="_on_SkipWaiting_pressed"]
